--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["gerasiki <gerasiki@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1"
+Pillow = "^9.2.0"
 
 [tool.poetry.dev-dependencies]
 
